# sandboxmatrix

./: .gitignore  .golangci.yml  .goreleaser.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  go.mod  go.sum
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
blueprints/: android-emulator.yaml  base-python.yaml  data-science.yaml  env-example.yaml  fullstack-matrix.yaml  go-dev.yaml  gpu-python-dev.yaml  node-dev.yaml  python-dev.yaml  rust-dev.yaml  web-api.yaml
cmd/smx/: main.go
deploy/: deployment.yaml  kustomization.yaml  namespace.yaml  rbac.yaml
deploy/crds/: blueprint-crd.yaml
deploy/grafana/: README.md
docs/: api-reference.md  architecture.md  deployment.md  sdk-guide.md
internal/aggregation/: aggregation.go  aggregation_test.go
internal/auth/: audit.go  audit_test.go  jwt.go  oidc.go  rbac.go  rbac_test.go
internal/autoscale/: autoscaler.go  autoscaler_test.go
internal/cli/: a2a.go  auth.go  autoscale.go  blueprint.go  cli_test.go  config.go  dashboard.go  gpu.go  image.go  matrix.go  mcp.go  operator.go  pool.go  root.go  sandbox.go  server.go  session.go  team.go  version.go
internal/config/: config.go  config_test.go
sdk/go/: README.md  (+4 more)
sdk/python/: README.md  pyproject.toml
sdk/python/src/sandboxmatrix/: __init__.py  client.py  crewai_tools.py  exceptions.py  http_client.py  langchain_tools.py  models.py
sdk/python/tests/: test_client.py
test/: e2e_test.sh
(+93 files in other folders)
