[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandboxmatrix"
version = "0.1.0"
description = "Python SDK for sandboxMatrix - AI sandbox orchestrator"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "hgDendi" }
]
keywords = ["sandbox", "ai", "mcp", "orchestrator", "docker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0", "pydantic>=2.0"]
crewai = ["crewai>=0.40.0", "pydantic>=2.0"]
all = ["langchain-core>=0.2.0", "crewai>=0.40.0", "pydantic>=2.0"]

[project.urls]
Homepage = "https://github.com/hgDendi/sandboxmatrix"
Repository = "https://github.com/hgDendi/sandboxmatrix"
